--- a/Client/index.html
+++ b/Client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/DashLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="/theme-init.js"></script>
     <title>DASH</title>
   </head>
   <body class="bg-primarybg">
