Basic HeroCard Created

--- a/Client/index.html
+++ b/Client/index.html
@@ -7,7 +7,7 @@
     <script src="./theme-init.js"></script>
     <title>DASH</title>
   </head>
-  <body class="bg-primarybg">
+  <body class="bg-primarybg transition-all duration-400 ease">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
